# okf

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: quality.yml
docs/: aisats-pilot-runbook.md  architecture.md  crawler-qa-and-corpus-storage.md  m1-aisats-discovery.md  okf-definition.md  okf-rag-implementation.md  production-hybrid-rag.md  project-charter.md  stage-1-backlog.md  stage-1-plan.md  stage-2-plan.md  validation-ui.md
docs/decisions/: ADR-0001-technology-and-pilots.md  ADR-0002-corpus-approval-gate.md  ADR-0003-qa-risk-acceptance-and-stage2-contract.md  ADR-0004-okf-and-rag-independent-baselines.md  ADR-0005-qwen3-pgvector-hybrid-retrieval.md
schemas/: okf-1.0.schema.json
src/okf_platform/: __init__.py  cli.py  convergence.py  corpus.py  crawler.py  deep_scrape.py  discovery.py  extraction.py  governance.py  knowledge_io.py  knowledge_service.py  models.py  okf_core.py  pdf.py  policy.py  qa.py  rag.py  rag_models.py  rag_runtime.py  robots.py  run_service.py  snapshot.py  stage2.py  storage.py  transport.py  vector_store.py  web.py  workflow.py
src/okf_platform/sql/: 001_pgvector.sql
src/okf_platform/static/: app.js  index.html  styles.css
tests/: test_corpus.py  test_crawler.py  test_discovery.py  test_extraction.py  test_governance.py  test_knowledge.py  test_package.py  test_pdf.py  test_policy.py  test_qa.py  test_rag_models.py  test_rag_runtime.py  test_reliability.py  test_web.py
