[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okf-platform"
version = "0.0.1"
description = "Auditable website document discovery and OKF/RAG evaluation platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OKF Project Contributors" }]
dependencies = [
  "langgraph>=0.2,<2",
  "pymupdf>=1.24,<2",
]

[project.scripts]
okf-crawl = "okf_platform.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/okf_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
