[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okf-platform"
version = "0.8.0"
description = "Auditable website document discovery and OKF/RAG evaluation platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OKF Project Contributors" }]
dependencies = [
  "fastapi>=0.115,<1",
  "langgraph>=0.2,<2",
  "pymupdf>=1.24,<2",
  "playwright>=1.50,<2",
  "uvicorn>=0.30,<1",
]

[project.scripts]
okf-crawl = "okf_platform.cli:main"
okf-ui = "okf_platform.web:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
models = [
  "sentence-transformers>=5.1,<6",
]
postgres = [
  "pgvector>=0.4,<1",
  "psycopg[binary]>=3.2,<4",
]
production-rag = [
  "pgvector>=0.4,<1",
  "psycopg[binary]>=3.2,<4",
  "sentence-transformers>=5.1,<6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/okf_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
